--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       if (container.children.length === 0) {
         const img = document.createElement("img");
-        img.src = "https://ci3.googleusercontent.com/mail-img-att/AGAZnRqHMBBUNlo0Q0A1Xqj-ggzpB68akd3j62FdXlKr4-V2ffZEIVc4VTi7G3XJEeRyo-ZFFMS-D3XBUM0Qk7NjLXecSIlk4Nmp_Ys0XrEyqP1V5ahyZgHNlBRYO4MA-PpILtQhUDh0ZTY-OGrs-zePdb9F3WhquePHqOcbvEdXCt_ti59PghAGmgBmQPQNbasi0L5ViA3NGf9L7LJ9vKr7DW33J-OFrrVf085MC9WnAQTCfluxI9NmNbK9KbZCARzTajd2KWgYRGPUF00ZKX8QW49lbFlM7-NslPJ-Z-oRHQEOQTeoNCoz6WflPy0uQg-nJrZxBXBcITtQ1ncrE0j_KGNF8BE4hDOmh3Qab8LUbv8zT3A1uqVCXwLefYXLvr8mpW32NsVsxCF6pJNygueJUnclJQEWgt2M8_q-0O1f1gpib3ODIA8m0v2nlCP6gGlgP7Xh2AsXSjs0c3202k5i-wC0Uaf5XYzGh8ky7f8dtD_Pc2eUOT3-SUqweQKJwsRNnEB6lwiCeNPcft3KayZgmsiLosDWhKKauvj4sn9xfkoBYYv3pgK8aDJyDYTj0q5AKRTe62Jh8YzrWKA_ClX7Myx0plBWSheOAWgRe2lysPiWD024Jn9iazGcjTdLKE9YCC_3CqoIW00VrX4gP6EcClBET-Shz-c_pJemzV3HaI8lTbVa_P432kn7uke4Zm7Vz7rYJFzapOzAZ_3IIJYyDZUaYxepgUcrAN3sIOVXyz2hiYj9w7Woe5W191foDB_jbyHG-Ckrgo0PbfRWfnEof-nfA_MnQts8CdrRTzt4CoH_eADD6kZYecvpDM-qWsKlvE__xVJzpPYJd1gvziOiCrlBlxmFvFVzuZUhmgwtWhtSP6ZSEq17hqnRFOY-bT-F8tU5eS80uYvkob6gnSCfvojWcfIORXtksLUSoPQ7xu3p0EAtC36trVjqeEzZi4Ud737gffd02r3LYBDUce-y-R11n4XuqhMSCM9AsAEYVqD5YET0TWEPqJU9oDQn02z7FJyfZgaz9O7yq4k4ITVX6mHNGBmHnDQ=s0-l75-ft";
+        img.src = "./unnamed.jpg";
         img.alt = "Przykładowy obraz";
         container.appendChild(img);
       }
